# agros2d

./: CMakeLists.txt
agros2d-library/: infowidget.cpp
agros2d-library/hermes2d/: block.cpp  block.h  field.cpp  field.h  problem.cpp  problem.h  solutionstore.cpp  solutionstore.h  solver.cpp  solver.h  solver_interface.h
agros2d-library/util/: enums.h
bem/: CMakeLists.txt  algebra.cpp  algebra.h  bem.cpp  bem.h  bem.pro  bem_global.h  bem_interface.cpp  bem_interface.h  bem_matrix.cpp  bem_matrix.h  main.cpp  matrix  matrix.pro  mesh.cpp  mesh.h  quad_tables.h  test_matrix.cpp  test_matrix.pro
bem/doc/: Doxyfile
bem/src/: bem_interface.cpp  bem_interface.h  bem_matrix.cpp  bem_matrix.h  main.cpp  mesh.h  not_used.cpp  quad_tables.h  solver.cpp  solver.h
bem/tests/: CMakeLists.txt  test_matrix  test_matrix.cpp  test_matrix.moc
bem/tests/complex_try/: complex_try.pro  main.cpp
data/: electrostatic_axisymmetric_capacitor.a2d  electrostatic_axisymmetric_sparkgap.a2d  heat_transfer_planar_building.a2d  magnetic_steadystate_planar_magnet.a2d
hermes2d/: hermes2d.pro
hermes2d/src/: common.h  data_table.cpp  data_table.h  discrete_problem.cpp  hermes2d.h  linear_problem.cpp  matrix.h  mesh.cpp  mumps_solver.cpp  solvers.cpp  solvers.h  sparselib_solver.cpp  superlu_solver.cpp  sync.sh  umfpack_solver.cpp
src/: datatabledialog.cpp  datatabledialog.h  logdialog.cpp  logdialog.h  mainwindow.cpp  mainwindow.h  problemdialog.cpp  problemdialog.h  progressdialog.cpp  scene.cpp  scene.h  sceneinfoview.cpp  src.pro  util.cpp  util.h
src/hermes2d/: hermes_current.cpp  (+15 more)
(+11 files in other folders)
